# graphyn

./: .gitignore  Cargo.toml  LICENSE  README.md  install.ps1  install.sh
.github/workflows/: ci.yml  publish_crates.yml  release.yml
agent-configs/: AGENTS.md  README.md
agent-configs/antigravity/rules/: graphyn.md
agent-configs/antigravity/workflows/: graphyn-impact-check.md
agent-configs/claude/: CLAUDE.md
agent-configs/claude/skills/graphyn/: SKILL.md
agent-configs/cursor/rules/: graphyn.mdc
agent-configs/gemini/: GEMINI.md
agent-configs/github/: copilot-instructions.md
agent-configs/mcp/: README.md
crates/graphyn-adapter-c/: Cargo.toml
crates/graphyn-adapter-c/src/: extractor.rs  include_resolver.rs  lib.rs  namespace_resolver.rs  parser.rs  preprocessor.rs  scope_analyzer.rs  template_analyzer.rs
crates/graphyn-adapter-c/tests/: alias_import.rs
crates/graphyn-adapter-dispatch/: Cargo.toml
crates/graphyn-adapter-dispatch/src/: lib.rs
crates/graphyn-adapter-go/: Cargo.toml
crates/graphyn-adapter-go/src/: extractor.rs  import_resolver.rs  interface_detector.rs  lib.rs  module_resolver.rs  parser.rs  scope_analyzer.rs
crates/graphyn-adapter-go/tests/: alias_import.rs
crates/graphyn-adapter-python/: Cargo.toml
crates/graphyn-adapter-python/src/: extractor.rs  framework.rs  import_resolver.rs  language.rs  lib.rs  parser.rs  scope_analyzer.rs
crates/graphyn-adapter-python/tests/: alias_import.rs
crates/graphyn-adapter-rust/: Cargo.toml
crates/graphyn-adapter-rust/src/: extractor.rs  import_resolver.rs  lib.rs  macro_analyzer.rs  module_tree.rs  parser.rs  scope_analyzer.rs
crates/graphyn-adapter-rust/tests/: alias_import.rs
crates/graphyn-adapter-ts/: Cargo.toml  README.md
crates/graphyn-adapter-ts/src/: extractor.rs  framework_preprocessor.rs  import_resolver.rs  language.rs  lib.rs  parser.rs  tsconfig.rs  walker.rs
crates/graphyn-adapter-ts/tests/: alias_import.rs  ast_extraction.rs  astro_support.rs  barrel_chain.rs  builtin_types.rs  collision_resolution.rs  cyclic_barrel.rs  decorators_di.rs  deep_barrel.rs  deep_dependency.rs  di_injection.rs  dist_excluded.rs  esm_extensions.rs  external_imports.rs  method_tracking.rs  property_access.rs  re_exports.rs  scan_filters.rs  svelte_support.rs  tsconfig_paths.rs  tsx_jsx.rs  vue_support.rs
crates/graphyn-cli/: Cargo.toml  README.md
crates/graphyn-cli/src/: main.rs  output.rs
crates/graphyn-cli/src/commands/: analyze.rs  mod.rs  query.rs  serve.rs  status.rs  watch.rs
crates/graphyn-cli/tests/: polyglot.rs
crates/graphyn-core/: Cargo.toml  README.md
crates/graphyn-core/src/: error.rs  graph.rs  incremental.rs  index.rs  ir.rs  lib.rs  query.rs  resolver.rs  scan.rs
crates/graphyn-core/tests/: alias_resolution.rs  blast_radius.rs
crates/graphyn-mcp/: Cargo.toml  README.md
crates/graphyn-mcp/src/: context_builder.rs  lib.rs  server.rs
crates/graphyn-mcp/src/tools/: blast_radius.rs  dependencies.rs  mod.rs  refresh_graph.rs  symbol_usages.rs
crates/graphyn-store/: Cargo.toml  README.md
crates/graphyn-store/src/: cache.rs  lib.rs  rocksdb.rs
crates/graphyn-store/tests/: cache.rs  rocksdb_store.rs
docs/: SUMMARY.md  agent-guide.md  architecture.md  introduction.md  ir-spec.md  mcp-tools.md  polyglot-benchmarks.md
fixtures/adapter-c/alias_import_bug_c/include/: user_payload.h
fixtures/adapter-c/alias_import_bug_c/src/: view_model_mapper.c
fixtures/adapter-c/alias_import_bug_cpp/include/: user_payload.hpp
fixtures/adapter-c/alias_import_bug_cpp/src/: view_model_mapper.cpp
fixtures/adapter-go/alias_import_bug/: go.mod
fixtures/adapter-go/alias_import_bug/mappers/deep/: view_model_mapper.go
fixtures/adapter-go/alias_import_bug/models/: user_payload.go
fixtures/adapter-py/alias_import_bug/mappers/deep/: view_model_mapper.py
fixtures/adapter-py/alias_import_bug/models/: user_payload.py
fixtures/adapter-rust/alias_import_bug/src/: lib.rs
fixtures/adapter-rust/alias_import_bug/src/mappers/: view_model_mapper.rs
fixtures/adapter-rust/alias_import_bug/src/models/: user_payload.rs
fixtures/adapter-ts/astro_component/src/components/: Card.ts
fixtures/adapter-ts/astro_component/src/layouts/: Layout.astro
fixtures/adapter-ts/astro_component/src/pages/: index.astro
fixtures/adapter-ts/barrel_chain/src/: app.ts
fixtures/adapter-ts/barrel_chain/src/components/: blockquote.ts  code.ts  index.ts
fixtures/adapter-ts/builtin_types/src/: app.ts
fixtures/adapter-ts/collision/src/: usage.ts
fixtures/adapter-ts/cyclic_barrel/src/: app.ts
fixtures/adapter-ts/deep_barrel/src/: app.ts
fixtures/adapter-ts/deep_barrel/src/lib/: index.ts
fixtures/adapter-ts/di_injection/src/: email.service.ts  payment.service.ts  user.repository.ts
fixtures/adapter-ts/esm_extensions/src/: server.mts
fixtures/adapter-ts/external_imports/src/: app.ts  utils.ts
fixtures/adapter-ts/ignore_filters/src/: .gitignore  included.ts
fixtures/adapter-ts/multiline_import/src/: use.ts
fixtures/adapter-ts/nestjs_di/src/: app.module.ts  user.repository.ts  user.service.ts
fixtures/adapter-ts/property_access/src/: usage.ts
fixtures/adapter-ts/re_exports/src/: index.ts
fixtures/adapter-ts/svelte_component/src/: App.svelte
fixtures/adapter-ts/tsconfig_paths/: tsconfig.json
fixtures/adapter-ts/tsconfig_paths/src/: app.ts  config.ts
fixtures/adapter-ts/tsx_jsx/src/: component.tsx  view.jsx
fixtures/adapter-ts/vue_component/src/: App.vue
fixtures/alias-import-bug/: README.md
fixtures/alias-import-bug/src/models/: user_payload.ts
(+8 files in other folders)
