[package]
name = "graphyn-cli"
description = "Developer CLI for Graphyn — analyze, query, watch, and serve code intelligence"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true

[[bin]]
name = "graphyn"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
notify = "6"
tokio = { version = "1", features = ["full"] }
graphyn-core = { path = "../graphyn-core", version = "0.1.1" }
graphyn-adapter-ts = { path = "../graphyn-adapter-ts", version = "0.1.1" }
graphyn-store = { path = "../graphyn-store", version = "0.1.1" }
graphyn-mcp = { path = "../graphyn-mcp", version = "0.1.1" }
