[package]
name = "graphyn-core"
description = "Language-agnostic code intelligence graph engine — the heart of Graphyn"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
petgraph = "0.6"
dashmap = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
rayon = "1"
