[package]
name = "graphyn-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcp = { version = "1", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
graphyn-core = { path = "../graphyn-core" }
graphyn-adapter-ts = { path = "../graphyn-adapter-ts" }
graphyn-store = { path = "../graphyn-store" }
