[package]
name = "graphyn-mcp"
description = "MCP server for Graphyn — exposes code intelligence tools to AI agents"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
rmcp = { version = "1", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
graphyn-core = { path = "../graphyn-core", version = "0.1.2" }
graphyn-adapter-ts = { path = "../graphyn-adapter-ts", version = "0.1.2" }
graphyn-store = { path = "../graphyn-store", version = "0.1.2" }
