[package]
name = "graphyn-store"
description = "Persistence layer for Graphyn — RocksDB graph storage and LRU cache"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
rocksdb = { version = "0.21", default-features = false }
graphyn-core = { path = "../graphyn-core", version = "0.1.1" }
